# legal_intel_dashboard

./: .env.example  .env.prod.example  .gitignore  README.md  SETUP_GUIDE.md  clear_containers.sh  docker-compose.prod.yml  docker-compose.yml  run_containers.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  entrypoint-celery.sh  entrypoint.prod.sh  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 414a7b8d6f8f_initial_migration.py  60d362d2381f_initial_migration.py  9f9412c9607c_add_embedding_column_for_semantic_search.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  documents.py  export.py  health.py  monitoring.py  query.py  users.py  websocket.py
backend/app/core/: celery_app.py  config.py  database.py  logging_config.py  security.py  websocket_manager.py
backend/app/middleware/: cache.py  rate_limit.py
backend/app/models/: __init__.py  base.py  document.py  user.py
backend/app/schemas/: auth.py  document.py  user.py
backend/app/services/: dashboard_service.py  document_parser.py  document_service.py  embedding_service.py  export_service.py  metadata_extractor.py  query_service.py
backend/app/tasks/: __init__.py  document_tasks.py
backend/scripts/: create_test_user.py  init_db.py
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_endpoints.py  test_main.py
backend/tests/fixtures/: __init__.py  auth_fixtures.py  database_fixtures.py  document_fixtures.py
frontend/: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  App.tsx  Dockerfile  Dockerfile.optimized  Dockerfile.prod  jest-dom.d.ts  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  theme.config.tsx  tsconfig.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/api/: auth.ts.html  client.ts.html  dashboard.ts.html  documents.ts.html  export.ts.html  index.html  query.ts.html
frontend/coverage/lcov-report/app/: index.html  layout.tsx.html  page.tsx.html
frontend/coverage/lcov-report/app/login/: index.html  page.tsx.html
frontend/coverage/lcov-report/app/query/: index.html  page.tsx.html
frontend/coverage/lcov-report/app/upload/: index.html  page.tsx.html
frontend/coverage/lcov-report/components/legal/: AgreementTypesChart.tsx.html  DocumentUpload.tsx.html  JurisdictionChart.tsx.html  QueryFilters.tsx.html  QueryInput.tsx.html  ResultsTable.tsx.html  StatsCards.tsx.html  index.html
frontend/coverage/lcov-report/components/ui/: ErrorDisplay.tsx.html  LoadingSkeleton.tsx.html  Navigation.tsx.html  Pagination.tsx.html  index.html
frontend/coverage/lcov-report/context/: AuthContext.tsx.html  index.html
frontend/coverage/lcov-report/guards/: AuthGuard.tsx.html  index.html
frontend/coverage/lcov-report/hooks/: index.html  useAuth.ts.html  useDashboard.ts.html  useDebounce.ts.html  useDocumentQuery.ts.html  useDocuments.ts.html  useExport.ts.html  useQuerySuggestions.ts.html  useWebSocket.ts.html
frontend/coverage/lcov-report/providers/: ClientProviders.tsx.html  QueryProvider.tsx.html  index.html
frontend/src/api/: auth.ts  client.ts  dashboard.ts  documents.ts  export.ts  query.ts  types.ts
frontend/src/app/: globals.css  layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/debug/: page.tsx
frontend/src/app/login/: page.test.tsx  page.tsx
frontend/src/app/query/: page.test.tsx  page.tsx
frontend/src/app/upload/: page.test.tsx  page.tsx
frontend/src/components/legal/: AgreementTypesChart.tsx  DocumentUpload.tsx  JurisdictionChart.tsx  QueryFilters.tsx  QueryInput.tsx  ResultsTable.tsx  StatsCards.tsx
frontend/src/components/ui/: ErrorDisplay.tsx  LoadingSkeleton.tsx  Navigation.tsx  Pagination.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/guards/: AuthGuard.tsx
frontend/src/hooks/: useAuth.ts  useDashboard.ts  useDebounce.ts  useDocumentQuery.ts  useDocuments.ts  useExport.ts  useQuerySuggestions.ts  useWebSocket.ts
frontend/src/providers/: ClientProviders.tsx  QueryProvider.tsx
frontend/src/styles/: animations.css
frontend/styles/: animate.css  tailwind.css
nginx/: init-nginx.conf  nginx.conf  post-nginx.conf
test_documents/: 01_nda_abudhabi_tech.docx  03_service_agreement_delaware_healthcare.docx  05_license_agreement_newyork_oil_gas.docx  07_lease_agreement_dubai_real_estate.docx  generate_more_docs.py  generate_test_docs.py
